fixing height of logo / link to not be bigger than the visible area it contains.
Fixes Issue #8591

--- a/src/main/webapp/seleniumhq.css
+++ b/src/main/webapp/seleniumhq.css
@@ -1300,7 +1300,7 @@ ol.faq li a:hover {
 	#header h1 a {
 		display: block;
 		width: 268px;
-		height: 64px;
+		height: 20px;
 		background: transparent url("images/header-logo.png") no-repeat;
 		text-indent: -6px;
 		text-decoration: none;
